# house-price-mlops

./: .dockerignore  .flake8  Dockerfile  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: logger.py  main.py  model.pkl  preprocess.py  schema.py
mlruns/1/models/m-1186cefede1e4ca3bc99e872064dd853/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-1e97a23d15e14fdfa0ce1d4ded1890ed/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/1/models/m-1f91cf65be38427fb3cd92dc543e1e87/artifacts/: MLmodel  model.pkl  registered_model_meta
mlruns/1/models/m-3e4f96394b234323a10a4397392b4f37/artifacts/: MLmodel
mlruns/1/models/m-530a8e9887474347af19d6b044891ede/artifacts/: MLmodel  conda.yaml  model.ubj  registered_model_meta  requirements.txt
mlruns/1/models/m-5501dcf1b1be466d8e54e2ca04e946cd/artifacts/: MLmodel  input_example.json  model.pkl  serving_input_example.json
mlruns/1/models/m-6c60dd21dd0244569e7c76bf5961e044/artifacts/: MLmodel  requirements.txt
mlruns/1/models/m-7e270ca48ae04efdaf698d5edf5c9bfb/artifacts/: MLmodel
mlruns/1/models/m-94a64a5fdc024cc7a6b83f62d581f4f0/artifacts/: MLmodel
mlruns/1/models/m-9e02522d481e488ab42e289b03e9d431/artifacts/: MLmodel
mlruns/1/models/m-aee28b1f41e24df8ba919dd0e3c65dea/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-b4714fa902824b858fe889622f643e6d/artifacts/: MLmodel  conda.yaml  model.pkl
test/: test_api.py
train/: compare_models.py  promote_best_model.py  train_model.py  train_with_mlflow.py
(+9 files in other folders)
