[project]
name = "house-price-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.48.0",
]
